<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_story"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/logomyfogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_story" />

    <com.dicoding.android.dicodingstoryapp.ui.customview.EmailEditText
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_password_title"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <com.dicoding.android.dicodingstoryapp.ui.customview.PasswordEditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password_title"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/action_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:textColor="@color/colorGrey"
        app:backgroundTint="@null"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/tv_havent_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_havent_account"/>

        <TextView
            android:id="@+id/tv_register_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorDarkBlue"
            android:layout_marginStart="4dp"
            android:text="@string/action_to_register"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
